src/test/deca/context/valid/test_this_explicite.deca
// Description:
//    Programme testant une selection this explicite
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : OUI
//
// Resultats:
//    5
//
// Historique:
//    cree le 21/01/2021

class A  {
	protected int x = 5 ;
	int getX(){
		return this.x;
	}
}
{
	A a = new A();	
	int b = a.getX();
	println(b);
}
