src/test/deca/context/invalid/test_class_return_void.deca
// Description:
//    Programme verifiant qu'une methode void ne peut rien retourner
//	  Etape(s) : A, B 
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
//
// Resultats:
//    erreur ligne 17
//
// Historique:
//    cree le 22/01/2021

class A  {
	protected int x ;
	void getX(){
		return this.x;
	}
}
